# pyterrier-nuggetizer

./: .dockerignore  .gitignore  Dockerfile  README.md  logs.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
data/answers/: baseline_rag24.test_command-r-plus_top20.jsonl  baseline_rag24.test_gpt-4o_top20.jsonl  baseline_rag24.test_l31_70b_instruct_top20.jsonl
data/assignments/: baseline_rag24.test_command-r-plus_top20.jsonl  baseline_rag24.test_gpt4o_top20.jsonl  baseline_rag24.test_l31_70b_instruct_top20.jsonl
data/metrics/: baseline_rag24.test_command-r-plus_top20.jsonl  baseline_rag24.test_gpt_4o_top20.jsonl  baseline_rag24.test_l31_70b_instruct_top20.jsonl
data/nuggets/: _legacy_nuggets.jsonl  os_nuggets.jsonl  rag24_nuggets_gpt4o.jsonl  rag24_nuggets_mistral.jsonl  rag24_nuggets_mistral_hf.jsonl
examples/: example.ipynb
scripts/: assign_nuggets.py  assign_nuggets_old.py  calculate_metrics.py  create_nuggets.py
src/open_nuggetizer/: __init__.py  _measure.py  _types.py  metrics.py  nuggetizer.py  util.py
src/open_nuggetizer/core/: base.py  hf_llm.py  llm.py  metrics.py  prompt.py  types.py  vllm.py
src/open_nuggetizer/measure/: _ir_measures.py  _measures.py  _provider.py  _util.py  _wnp.py
src/open_nuggetizer/models/: hf_nuggetizer.py  nuggetizer.py  vllm_nuggetizer.py
src/open_nuggetizer/prompts/: __init__.py  _util.py  assigner.py  assigner_grade_2.txt  assigner_grade_3.txt  creator.py  creator.txt  scorer.py  (+2 more)
tests/: test_assigner.py  test_creator.py  test_metrics.py  test_nuggetizer.py  test_scorer.py
(+2 files in other folders)
